[package]
name = "rs-bytes2qrcode"
version = "0.1.0"
edition = "2024"
description = "CLI to convert bytes(stdin) to a QR code(stdout)."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-bytes2qrcode"
documentation = "https://docs.rs/crate/rs-bytes2qrcode/latest"
keywords = ["qrcode", "cli", "terminal"]
categories = ["command-line-utilities"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
strip = true
lto = true
opt-level = "s"
codegen-units = 16

[dependencies]
qrcode = { version = "0.12", default-features = false }
anyhow = "1.0"
